--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -1,5 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FF3D00" />
-    <corners android:radius="12dp" />
-    <stroke android:width="2dp" android:color="#FF7043" />
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/btn_bg"/>
+    <corners android:radius="12dp"/>
+    <padding
+        android:left="8dp"
+        android:top="8dp"
+        android:right="8dp"
+        android:bottom="8dp"/>
 </shape>
