--- a/app/src/main/res/drawable/orange_circle.xml
+++ b/app/src/main/res/drawable/orange_circle.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FFFF5722" />
-    <size android:width="100dp" android:height="100dp" />
-    <gradient
-        android:type="radial"
-        android:gradientRadius="60dp"
-        android:startColor="#55FF5722"
-        android:endColor="#00FF5722" />
+    <solid android:color="@color/alert_medium"/>
+    <size
+        android:width="24dp"
+        android:height="24dp"/>
 </shape>
